# 42Minishell

./: .gitignore  CMakeLists.txt  Makefile  README.md
includes/: builtin.h  environment_variables.h  minishell.h  redirect.h  run.h  segment.h
integrationTests/: minishell  os_specific
libft/convert/: ft_atoi.c  ft_itoa.c
libft/gnl/: get_next_line_utils_bonus.c
libft/list/: ft_lstadd_back_bonus.c  ft_lstadd_front_bonus.c  ft_lstclear_bonus.c  ft_lstdelone_bonus.c  ft_lstmap_bonus.c  ft_lstnew_bonus.c  ft_lstsize_bonus.c
libft/memory/: ft_memcmp.c  ft_memset.c
libft/print/: ft_putchar.c  ft_putchar_fd.c  ft_putnbr.c
libft/stack/: ft_stack.c
libft/string/: ft_isalnum.c  ft_isascii.c  ft_split.c  ft_strdup.c  ft_strmapi.c  ft_strnstr.c  ft_strtrim.c  ft_toupper.c
libft/vector/: ft_vector_utils.c
minishell/: Makefile
minishell/includes/: builtin.h  command_queue.h  environment_variables.h  evaluator.h  expand.h  ft_atol.h  ft_pipe.h  ft_strndup.h  ft_strnjoin.h  ft_transmit.h  minishell.h  read_stream.h  (+9 more)
src/: cleanup.c  env_vars.c  execute.c  ft_pipe.c  ft_transmit.c  get_shell_input.c  main.c  process.c  process_symbols.c  search_env_vars.c  segment.c  start_interactive.c  subshell.c  vector_subset.c
tests/: addSymbolAndWordTest.cpp  commandQueueTests.cpp  copyStringTest.cpp  extractStringTests.cpp  fakeMalloc.cpp  fakeMemoryTest.cpp  fileTests.cpp  fileTests.hpp  getTypeTests.cpp  individualTest.cpp  individualTest.hpp  parseTests.cpp  runTests.cpp  shuntingYardTests.cpp  syntaxTreeTests.cpp  test.hpp  tester.cpp  tester.hpp  tokenListTests.cpp
(+143 files in other folders)
